objects/Integration_Log__c.object
<CustomObject>
    <fields>
        <fullName>Accepted_JSON_String__c</fullName>
        <label>Accepted JSON String</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Attachments_Count__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Attachments Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Case_Number__c</fullName>
        <label>Case Number</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Error_Case_Records__c</fullName>
        <label>Error Case Records</label>
        <length>50000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Error_Message__c</fullName>
        <label>Error Message</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Error_Records__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Error Records</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Is_Error_Occured__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Error Occured</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Return_Response__c</fullName>
        <label>Return Response</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Success_Records__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Success Records</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Records_Processed__c</fullName>
        <formula>Success_Records__c  +  Error_Records__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Records Processed</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>DWRE</fullName>
                </value>
                <value>
                    <fullName>CFS</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Integration Log</label>
    <nameField>
        <label>DWRE Error Log Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Integration Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>